# ggtypst

./: .Rbuildignore  .gitattributes  .gitignore  .pre-commit-config.yaml  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  cran-comments.md  justfile
.github/: CONTRIBUTING.Rmd  CONTRIBUTING.md
.github/workflows/: R-CMD-check.yml  Rust-test.yml  code-quality-check.yml  pkgdown.yml
R/: annotate-math.R  annotate-typst.R  annotate_typst.R  build-source.R  build_source.R  diagnostic.R  element-math.R  element-typst.R  extendr-wrappers.R  geom-math.R  geom-typst.R  grob.R  helper.R  mitex.R  show_svg.R  typst-grob.R  typst-svg.R  typst_svg.R  zzz.R
ggtypst-skill/: SKILL.md
inst/: WORDLIST
inst/examples/: annotate-showcase.R  element-showcase.R  geom-showcase.R  render-showcases.R
man/: annotate_math_mitex.Rd  annotate_math_typst.Rd  annotate_typst.Rd  build_typst_source.Rd  convert_latex_to_typst.Rd  element_math_mitex.Rd  element_math_typst.Rd  element_typst.Rd  geom_math_mitex.Rd  geom_math_typst.Rd  geom_typst.Rd  typst_svg.Rd
pkgdown/: extra.scss  generate-icon.R  index.md
src/: Makevars.in  Makevars.win.in  entrypoint.c  ggtypst-win.def
src/rust/: Cargo.toml
src/rust/specs/: mod.typ  prelude.typ
src/rust/src/: error.rs  fonts.rs  lib.rs  mitex.rs  mitex_integration.rs  render.rs  world.rs
tests/: testthat.R
tests/testthat/: helper.R  test-annotate-math-mitex.R  test-annotate-typst.R  (+14 more)
tools/: benchmark-results.txt  benchmark.R  build-site.R  generate-icon.R  icon.R
vignettes/: benchmark.Rmd  get-started.Rmd  ggtypst-skill.Rmd
(+12 files in other folders)
