[package]
name = 'ggtypst'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.89'

[lib]
crate-type = [ 'staticlib' ]
name = 'ggtypst'

[dependencies]
extendr-api = '0.8.1'
mitex = "0.2.4"
typst = "0.14.2"
typst-kit = { version = "0.14.2", features = [ "embed-fonts"] , default-features = false }
typst-svg = "0.14.2"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
